# player-ffmpeg-sdl

./: .gitignore  CMakeLists.txt  audio.cpp  audio.h  audio_decoder.cpp  audio_decoder.h  audio_format_converter.cpp  audio_format_converter.h  demuxer.cpp  demuxer.h  display.cpp  display.h  main.cpp  player.cpp  player.h  queue.h  video_decoder.cpp  video_decoder.h
cmake/: FindFFmpeg.cmake
